# OpenCV_HW2

./: .gitignore  compare.py  main.py  makefile  model.py  pyproject.toml  test.py  test_model.py  train_resnet50.py  train_vgg19.py  training.py
training/: model.py  train_resnet50.py  train_resnet50_with_random.py  train_vgg19.py
