[tool.poetry]
name = "hw2"
version = "0.1.0"
description = ""
authors = ["miohitokiri5474 <lltzpp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
packaging = "^23.2"
scipy = "^1.11.4"
black = "^23.11.0"
isort = "^5.13.0"
matplotlib = "^3.8.2"
torch = "^2.1.1"
torchvision = "^0.16.1"
cpython = "^0.0.6"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
